[package]
name          = "khronos-egl"
version       = "2.0.0"
authors       = ["Timothée Haudebourg <author@haudebourg.net>", "Sean Kerr <sean@metatomic.io>"]
license       = "MIT/Apache-2.0"
description   = "Rust bindings for EGL"
repository    = "https://github.com/timothee-haudebourg/khronos-egl"
documentation = "https://docs.rs/khronos-egl"
readme        = "README.md"
keywords      = ["egl", "gl", "khronos", "opengl"]
build         = "build.rs"

[dependencies]
khronos = "0.1.2"
libc    = "0.2.60"

[build-dependencies]
pkg-config = "0.3.15"

[dev-dependencies]
gl = "0.11"
wayland-client = { version = "0.25" }
wayland-protocols = { version = "0.25", features = [ "client" ] }
wayland-egl = { version = "0.25" }
