[package]
name          = "khronos-egl"
version       = "2.1.1"
authors       = ["Timothée Haudebourg <author@haudebourg.net>", "Sean Kerr <sean@metatomic.io>"]
license       = "MIT/Apache-2.0"
description   = "Rust bindings for EGL"
repository    = "https://github.com/timothee-haudebourg/khronos-egl"
documentation = "https://docs.rs/khronos-egl"
readme        = "README.md"
keywords      = ["egl", "gl", "khronos", "opengl"]
build         = "build.rs"

[dependencies]
khronos = "^0.1"
libc    = "^0.2"

[build-dependencies]
pkg-config = "^0.3"

[dev-dependencies]
gl = "^0.14"
wayland-client = { version = "^0.28" }
wayland-protocols = { version = "^0.28", features = [ "client" ] }
wayland-egl = { version = "^0.28" }
