[package]
name          = "khronos-egl"
version       = "3.0.0-beta"
authors       = ["Timothée Haudebourg <author@haudebourg.net>", "Sean Kerr <sean@metatomic.io>"]
license       = "MIT/Apache-2.0"
description   = "Rust bindings for EGL"
repository    = "https://github.com/timothee-haudebourg/khronos-egl"
documentation = "https://docs.rs/khronos-egl"
readme        = "README.md"
keywords      = ["egl", "gl", "khronos", "opengl"]
build         = "build.rs"

[features]
default = ["1.5"]
static = ["pkg-config"]
dynamic = ["libloading"]
nightly = []
"1.5" = ["1.4"]
"1.4" = ["1.3"]
"1.3" = ["1.2"]
"1.2" = ["1.1"]
"1.1" = ["1.0"]
"1.0" = []

[dependencies]
libc = "^0.2"
libloading = { version = "^0.6", optional = true }

[build-dependencies]
pkg-config = { version = "^0.3", optional = true }

[dev-dependencies]
gl = "^0.14"
wayland-client = { version = "^0.28" }
wayland-protocols = { version = "^0.28", features = [ "client" ] }
wayland-egl = { version = "^0.28" }

[[example]]
name = "wayland-static"
required-features = ["static", "nightly"]

[[example]]
name = "wayland-dynamic"
required-features = ["dynamic"]